# portazgo

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
examples/: simple_invoke.py  simple_invoke_stream.py
scripts/: simple_invoke.sh  simple_invoke_stream.sh
src/cohorte/: __init__.py  agent.py  chats.py  default_impl.py  lang_graph.py
src/portazgo/: __init__.py  agent.py  default_impl.py  lang_graph.py  llama_utils.py  utils.py  validation.py
tests/: __init__.py  test_agent.py  test_chats.py  test_utils.py
